# simnet

./: .gitignore  Makefile  README.md
an/: gen_cpi_curves.py  plot_cpi_curve.py  plot_cpi_curves.py
cuda_inference/: README.md  parall_simnet.cu
dp/: 0_build1121.cpp  0_buildCxt.cpp  0_buildLSTM.cpp  0_buildML.cpp  0_buildQ.cpp  0_buildROB.cpp  1_check.py  1_combine.py  1_filter.py  1_unique.py  2_ML-to-mmap.py  2_ML-to-npy.py  2_Q-to-cmmap.py  2_Q-to-mmap.py  2_ml-to-npy.py  3_norm.py  3_scale.py  3_scaleQ.py  4_combine.py  4_combine_mmap.py  5_stats.py  5_statsML.py  5_statsQ.py  6_get_test.py  6_get_test_large.py  7_print_stat.py  8_build1121Sim.cpp  8_buildQSim.cpp  8_buildSim.cpp  Makefile  README.md  data.h  input_format.py  inst.h  inst_impl_1121.h  inst_impl_q.h  make_sim_input.py  ml_format.py  npz-to-mmap-format.py  pk_format.py  (+4 more)
ml/: README.md  README.md.old  cfg.py  cfg_1121.py  cfg_1221.py  cfg_lstm.py  cfg_lstm_fs.py  cfg_pc.py  cfg_pk.py  cfg_q.py  cfg_qq.py  cfg_rr.py  classifier.py  convert.py  convert_single.py  custom_data.py  modellist  models.py  models_lstm.py  profile.py  test_1121.py  test_com.py  test_lat.py  test_lat_half.py  test_lstm.py  test_qq.py  test_rr.py  train-from-one-file.py  train_1121.py  train_cla.py  train_cla_large.py  train_com.py  train_ddp.py  train_lat.py  train_lat_half.py  train_lat_large.py  train_lat_large_transformer.py  train_lat_mmap.py  train_lstm.py  train_mul.py  (+8 more)
ml/trt_cpp/: CMakeLists.txt  cfg.py  cfg_qq.py  code.cpp  code_dynamic.cpp  code_static.cpp  convert_script.py  models.py  onnx_convert.py  onnx_tensorrt_py.py  tester.cu  trt_model.py
pipeline/: 0_buildROB.sh  0_make_shorter_ml_file.sh  1_ml_to_npy.sh  1_unique.sh  2_ml_to_npy.sh  2_scale.sh  3_combine.sh  3_scale.sh  4_combine.sh  4_make_sim_input.sh  554.roms_r.1k.txt  5_make_sim_input.sh  5_train.sh  6_test_single.sh  6_train.sh  7_convert.sh  7_test_single.sh  8_convert.sh  8_simulate.sh  9_simulate.sh  convert.py  convert_only_best.py  feedback.sh  feedback_initial.sh  input_format_0.py  make_sim_input.py  ml-to-npy-0.py  models.py  runsimulations.py
sim/: CMakeLists.txt  CMakeLists_parallel.txt  README.md  make_sim_input.py  make_simulator.sh  parall_simnet.cpp  run_qqpasim.py  run_qqsim.py  run_rrsim.py  run_sim.py  runsimulations.py  sim_module.h  simulator.cpp  simulator_1121.cpp  simulator_half.cpp  simulator_q.cpp  simulator_qq.cpp  simulator_qq_pa.cpp  simulator_rr.cpp
sim/backup/: parall_simnet_v1.cpp  parallel_simnet_q_v1.cpp  parallel_simnet_q_v2.cpp
sim_CUDA/: Makefile  parall_simnet.cu  simulator.cu
sim_GPU/: CMakeLists.txt  check.py  gpu_simulator.cu  gpu_simulator_parallel.cu  init.cuh  libtorch_simulator_parallel.cu  run_code.sh  sim.cuh  trt.cuh  trt_simulator_parallel.cu  wtime.h
sim_q_GPU/: CMakeLists.txt  libtorch_sim.cu  libtorch_sim_nGPU.cu  sim.cuh  trt_sim.cu  trt_sim_nGPU.cu
sim_qq_GPU/: CMakeLists.txt  FindTensorRT.cmake  README.md  herror.h  libtorch_sim.cu  make_simulator.sh  preprocess.py  sim.cuh  trt.cuh  trt_sim_nGPU.cu
sim_qq_GPU/scripts/: result_analysis.py
sim_qq_GPU/trt_cpp/: code_static.cpp  convert_script.py  models.py
sim_qq_GPU_dynamic/: CMakeLists.txt  libtorch_sim.cu  sim.cuh
upload/: 505.mcf_r.ac100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__e200_021521_033021.ipc  505.mcf_r.ac100m.tr_E1DNet_from_input__e1d_b0__bargs___r1_k2_040421_best_072021.ipc  505.mcf_r.qq100m.tr_CNN3_F_3_2_128_2_1_2_256_2_0_2_256_2_0_1_040821_best_040921.ipc  505.mcf_r.qq100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__033121_best_033121.ipc  505.mcf_r.qq100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__040121_best_040121.ipc  505.mcf_r.qq100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__e200_021521_032521.ipc  505.mcf_r.qq100m.tr_CNN8_F_33_2_256_2_0_2_512_2_1_2_512_2_1_2_1024_2_1_2_1024_2_0_2_2048_2_1_2_2048_2_0_2_4097_2_0_1024__032721_best_033121.ipc  505.mcf_r.qq100m.tr_E1DNet_from_input__e1d_b0__bargs___r1_k2_040421_best_040421.ipc  505.mcf_r.qq100m.tr_true_032521.ipc  505.mcf_r.qq100m.tr_true_040121.ipc  507.cactuBSSN_r.ac100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__e200_021521_033021.ipc  507.cactuBSSN_r.ac100m.tr_E1DNet_from_input__e1d_b0__bargs___r1_k2_040421_best_072021.ipc  507.cactuBSSN_r.qq100m.tr_CNN3_F_3_2_128_2_1_2_256_2_0_2_256_2_0_1_040821_best_040921.ipc  507.cactuBSSN_r.qq100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__033121_best_033121.ipc  507.cactuBSSN_r.qq100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__040121_best_040121.ipc  507.cactuBSSN_r.qq100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__e200_021521_032521.ipc  507.cactuBSSN_r.qq100m.tr_CNN8_F_33_2_256_2_0_2_512_2_1_2_512_2_1_2_1024_2_1_2_1024_2_0_2_2048_2_1_2_2048_2_0_2_4097_2_0_1024__032721_best_033121.ipc  507.cactuBSSN_r.qq100m.tr_E1DNet_from_input__e1d_b0__bargs___r1_k2_040421_best_040421.ipc  507.cactuBSSN_r.qq100m.tr_true_032521.ipc  507.cactuBSSN_r.qq100m.tr_true_040121.ipc  519.lbm_r.qq100m.tr_CNN3_F_3_2_128_2_1_2_256_2_0_2_256_2_0_1_040821_best_040921.ipc  519.lbm_r.qq100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__033121_best_e274_040321.ipc  519.lbm_r.qq100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__e200_021521_040221.ipc  519.lbm_r.qq100m.tr_E1DNet_from_input__e1d_b0__bargs___r1_k2_040421_best_040521.ipc  519.lbm_r.qq100m.tr_true_040321.ipc  521.wrf_r.qq100m.tr_CNN3_F_3_2_128_2_1_2_256_2_0_2_256_2_0_1_040821_best_040921.ipc  521.wrf_r.qq100m.tr_CNN7_F_33_2_256_2_1_2_512_2_0_2_512_2_0_2_1024_2_0_2_1024_2_1_2_2048_2_0_2_2048_2_0_1024__033121_best_e274_040321.ipc  521.wrf_r.qq100m.tr_E1DNet_from_input__e1d_b0__bargs___r1_k2_040421_best_040521.ipc  (+87 more)
(+9 files in other folders)
