cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(sim)
set (CMAKE_CXX_FLAGS "-fopenmp -O3 -Wextra -g")
find_package(Torch REQUIRED)
add_executable(simulator simulator.cpp)
add_executable(simulator_ground_truth simulator.cpp)
add_executable(simulator_cla simulator.cpp)

add_executable(simulator_q simulator_q.cpp)
add_executable(simulator_q_ground_truth simulator_q.cpp)
add_executable(simulator_q_cla simulator_q.cpp)
add_executable(simulator_q_com simulator_q.cpp)

add_executable(simulator_parallel parall_simnet.cpp)
add_executable(simulator_parallel_cla parall_simnet.cpp)

target_link_libraries(simulator "${TORCH_LIBRARIES}")
target_link_libraries(simulator_ground_truth "${TORCH_LIBRARIES}")
target_link_libraries(simulator_cla "${TORCH_LIBRARIES}")
target_link_libraries(simulator_q "${TORCH_LIBRARIES}")
target_link_libraries(simulator_q_ground_truth "${TORCH_LIBRARIES}")
target_link_libraries(simulator_q_cla "${TORCH_LIBRARIES}")
target_link_libraries(simulator_q_com "${TORCH_LIBRARIES}")
target_link_libraries(simulator_parallel "${TORCH_LIBRARIES}")
target_link_libraries(simulator_parallel_cla "${TORCH_LIBRARIES}")

set_property(TARGET simulator PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_ground_truth  PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_cla PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_q PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_q_ground_truth  PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_q_cla PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_q_com PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_parallel PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_parallel_cla PROPERTY CXX_STANDARD 14)

target_compile_definitions(simulator_ground_truth PRIVATE RUN_TRUTH)
target_compile_definitions(simulator_cla PRIVATE CLASSIFY)
target_compile_definitions(simulator_q_ground_truth PRIVATE RUN_TRUTH)
target_compile_definitions(simulator_q_cla PRIVATE CLASSIFY)
target_compile_definitions(simulator_q_com PRIVATE COMBINED)
target_compile_definitions(simulator_parallel_cla PRIVATE CLASSIFY)
