cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(sim)
set (CMAKE_CXX_FLAGS "-fopenmp -g")
find_package(Torch REQUIRED)
add_executable(simulator simulator.cpp)
add_executable(simulator_ground_truth simulator.cpp)
add_executable(simulator_cla simulator.cpp)

add_executable(simulator_q simulator_q.cpp)
add_executable(simulator_q_ground_truth simulator_q.cpp)
add_executable(simulator_q_cla simulator_q.cpp)
add_executable(simulator_q_com simulator_q.cpp)

add_executable(simulator_qq simulator_qq.cpp)
add_executable(simulator_qq_ground_truth simulator_qq.cpp)
add_executable(simulator_qq_cla simulator_qq.cpp)
add_executable(simulator_qq_com simulator_qq.cpp)
add_executable(simulator_qq_cpi simulator_qq.cpp)
add_executable(simulator_qq_com_cpi simulator_qq.cpp)

add_executable(simulator_rr simulator_rr.cpp)
add_executable(simulator_rr_ground_truth simulator_rr.cpp)
add_executable(simulator_rr_com simulator_rr.cpp)
add_executable(simulator_rr_com_cpi simulator_rr.cpp)

add_executable(simulator_1121 simulator_1121.cpp)
add_executable(simulator_1121_gt simulator_1121.cpp)
add_executable(simulator_1121_cpi simulator_1121.cpp)
add_executable(simulator_1121_com simulator_1121.cpp)

add_executable(simulator_parallel parall_simnet.cpp)
add_executable(simulator_parallel_cla parall_simnet.cpp)

target_link_libraries(simulator "${TORCH_LIBRARIES}")
target_link_libraries(simulator_ground_truth "${TORCH_LIBRARIES}")
target_link_libraries(simulator_cla "${TORCH_LIBRARIES}")
target_link_libraries(simulator_q "${TORCH_LIBRARIES}")
target_link_libraries(simulator_q_ground_truth "${TORCH_LIBRARIES}")
target_link_libraries(simulator_q_cla "${TORCH_LIBRARIES}")
target_link_libraries(simulator_q_com "${TORCH_LIBRARIES}")
target_link_libraries(simulator_qq "${TORCH_LIBRARIES}")
target_link_libraries(simulator_qq_ground_truth "${TORCH_LIBRARIES}")
target_link_libraries(simulator_qq_cla "${TORCH_LIBRARIES}")
target_link_libraries(simulator_qq_com "${TORCH_LIBRARIES}")
target_link_libraries(simulator_qq_cpi "${TORCH_LIBRARIES}")
target_link_libraries(simulator_qq_com_cpi "${TORCH_LIBRARIES}")
target_link_libraries(simulator_parallel "${TORCH_LIBRARIES}")
target_link_libraries(simulator_parallel_cla "${TORCH_LIBRARIES}")
target_link_libraries(simulator_rr "${TORCH_LIBRARIES}")
target_link_libraries(simulator_rr_ground_truth "${TORCH_LIBRARIES}")
target_link_libraries(simulator_rr_com "${TORCH_LIBRARIES}")
target_link_libraries(simulator_rr_com_cpi "${TORCH_LIBRARIES}")
target_link_libraries(simulator_1121 "${TORCH_LIBRARIES}")
target_link_libraries(simulator_1121_gt "${TORCH_LIBRARIES}")
target_link_libraries(simulator_1121_cpi "${TORCH_LIBRARIES}")
target_link_libraries(simulator_1121_com "${TORCH_LIBRARIES}")

set_property(TARGET simulator PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_ground_truth  PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_cla PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_q PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_q_ground_truth  PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_q_cla PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_q_com PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_qq PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_qq_ground_truth  PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_qq_cla PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_qq_com PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_qq_cpi PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_qq_com_cpi PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_parallel PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_parallel_cla PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_rr PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_rr_ground_truth  PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_rr_com PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_rr_com_cpi PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_1121 PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_1121_gt PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_1121_cpi PROPERTY CXX_STANDARD 14)
set_property(TARGET simulator_1121_com PROPERTY CXX_STANDARD 14)

target_compile_definitions(simulator_ground_truth PRIVATE RUN_TRUTH)
target_compile_definitions(simulator_cla PRIVATE CLASSIFY)
target_compile_definitions(simulator_q_ground_truth PRIVATE RUN_TRUTH)
target_compile_definitions(simulator_q_cla PRIVATE CLASSIFY)
target_compile_definitions(simulator_q_com PRIVATE COMBINED)
target_compile_definitions(simulator_qq_ground_truth PRIVATE RUN_TRUTH DUMP_IPC)
target_compile_definitions(simulator_qq_cla PRIVATE CLASSIFY)
target_compile_definitions(simulator_qq_com PRIVATE COMBINED)
target_compile_definitions(simulator_qq_cpi PRIVATE DUMP_IPC)
target_compile_definitions(simulator_qq_com_cpi PRIVATE COMBINED DUMP_IPC)
target_compile_definitions(simulator_parallel_cla PRIVATE CLASSIFY)
target_compile_definitions(simulator_rr_ground_truth PRIVATE RUN_TRUTH DUMP_IPC)
target_compile_definitions(simulator_rr_com PRIVATE COMBINED)
target_compile_definitions(simulator_rr_com_cpi PRIVATE COMBINED DUMP_IPC)
target_compile_definitions(simulator_1121_cpi PRIVATE DUMP_IPC)
target_compile_definitions(simulator_1121_gt PRIVATE RUN_TRUTH DUMP_IPC)
target_compile_definitions(simulator_1121_com PRIVATE COMBINED)
